<resources>
    <string name="app_name">WApp Clone</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checked_icon">Checked Icon</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to_accept_the_terms_of_service">Read our Privacy Policy. Tap Agree and continueto accept the Terms of Service</string>
    <string name="restore">Restore</string>
    <string name="agree_and_continue">Agree And Continue</string>
    <string name="welcome_to_wapp_clone">Welcome to WApp Clone</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="ok">Ok</string>
    <string name="choose_country_or_enter_code">Choose a country or enter a valid country code.</string>
    <string name="enter_phone_no">Enter phone number</string>
    <string name="enter_valid_phone_no">Enter valid phone number</string>
    <string name="choose_a_country">Choose a country</string>
    <string name="invalid_country_code">Invalid country code</string>
    <string name="enter_valid_code">Enter a valid country code</string>
    <string name="enter_your_phone_no">Enter your phone number</string>
    <string name="help">Help</string>
    <string name="wapp_clone_will_send_an_sms_message_to_verify_your_phone_number_what_s_my_number">WApp Clone will send an SMS message to verify your phone number. What\'s my number?</string>
    <string name="carrier_sms_charges_may_apply">Carrier SMS charges may apply</string>
    <string name="edit">Edit</string>
    <string name="verify_no_alert">We will be verifying the phone number: \n\n +%1$s %2$s \n\nIs this OK, or would you like to edit the number? </string>
    <string name="verify_no_title">Verify +%1$s %2$s</string>
    <string name="profile_info">Profile info</string>
    <string name="required_to_enter_name">You are required to enter your name before continuing</string>
    <string name="waiting_to_automatically_detect_an_sms_sent_to">Waiting to automatically detect an SMS sent to</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="resend_sms_in">Resend SMS in</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="sms_icon">SMS icon</string>
    <string name="call_icon">Call icon</string>
    <string name="call_me">Call me</string>
    <string name="phone_no_dynamically">+%1$s %2$s</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>
    <string name="wapp_clone_web">WApp Clone Web</string>
    <string name="new_group">New group</string>
    <string name="share">Share</string>
    <string name="view_in_address_book">View in address book</string>
    <string name="verify_security_code">Verify security code</string>
    <string name="status_privacy">Status privacy</string>
    <string name="clear_call_log">Clear call log</string>
    <string name="loading">Loading…</string>
    <string name="profile_photo">Profile photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="please_provide_your_name_and_an_optional_user_photo">Please provide your name and an optional user photo</string>
    <string name="message">Message</string>
    <string name="add_contact">Add contact</string>
    <string name="refresh">Refresh</string>
    <string name="contacts">Contacts</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="select_contact">Select contact</string>
    <string name="new_contact">New contact</string>
    <string name="new_group_call">New group call</string>
    <string name="chats_t" translatable="false">Chats</string>
    <string name="chats">Chats</string>
    <string name="media_type_t">Media</string>
    <string name="message_notification_channel_name">New Messsage</string>
    <string name="message_notification_channel_description">message</string>
    <string name="null_t">null</string>
    <string name="online">online</string>
    <string name="yesterday">Yesterday</string>
    <string name="typing">typing…</string>
    <string name="recording">recording audio…</string>
    <string name="type_a_message">Type a message</string>

    <plurals name="number_of_contacts">
        <item quantity="one">%d contact</item>
        <item quantity="other">%d contacts</item>
    </plurals>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="contact_list_is_updated">Your contact list has been updated.</string>
    <string name="messages_and_calls_are_end_to_end_encrypted_tap_to_verify">Messages and calls are end-to-end encrypted. Tap to verify.</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="encryption">Encryption</string>
    <string name="media_visibility">Media visibility</string>
    <string name="custom_notifications">Custom notifications</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="media_links_and_docs">Media, links, and docs</string>
    <string name="other_phones">Other phones</string>
    <string name="block">Block</string>
    <string name="text_t">text</string>
    <string name="report_contact">Report contact</string>
    <string name="phone_number">Phone number</string>
    <string name="name_with_online_status">%1$s %2$s</string>
    <string name="contacts_help">Contacts help</string>
    <string name="if_some_of_your_friends_dont_appear">If some of your friends don\'t appear in the contacts list, we recommend the following steps: \n\n• Make sure that your friend\'s phone number is in your address book \n• Make sure that your friend is using WApp Clone</string>
    <string name="unstar_all">Unstar all</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="data_and_storage_usage">Data and storage usage</string>
    <string name="privacy_security_change_number">Privacy, security, change number</string>
    <string name="theme_wallpapers_chat_history">Theme, wallpapers, chat history</string>
    <string name="message_group_call_tones">Message, group &amp; call tones</string>
    <string name="network_usage_auto_download">Network usage, auto-download</string>
    <string name="faq_contact_us_privacy_policy">FAQ, contact us, privacy policy</string>
    <string name="questions_need_help">Questions? Need help?</string>
    <string name="app_info">App info</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="contact_us">Contact us</string>
    <string name="faq">FAQ</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="two_step_verification">Two-step verification</string>
    <string name="change_number">Change number</string>
    <string name="request_account_info">Request account info</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="describe_your_problem">Describe your problem</string>
    <string name="wapp_clone_secures_your_conversations_with_end_to_end_encryption_this_means_your_essages_calls_and_status_updates_stay_between_you_and_the_people_you_choose_not_even_wapp_cna_read_or_listen_to_them_learn_more">WApp Clone secures your conversations with end-to-end encryption. This means your essages, calls and status updates stay between you and the people you choose. Not even WApp cna read or listen to them. Learn more</string>
    <string name="show_security_notifications">Show security notifications</string>
    <string name="turn_on_this_setting_to_receive_notifications_when_one_of_your_contact_s_security_code_changes">Turn on this setting to receive notifications when one of your contact\'s security code changes.</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_about">Add About</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="last_seen_today">last seen today at %1$s</string>
    <string name="last_seen_yesterday">last seen yesterday at %1$s</string>
    <string name="last_seen_day">last seen %1$s %2$s</string>
    <string name="last_seen_month_day">last seen %1$s %2$s, %3$s</string>
    <string name="qr_code">QR code</string>
    <string name="reset_qr_code">Reset QR code</string>
    <string name="this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_wapp_contacts">This is not your username or pin. This name will be visible to your WApp contacts.</string>
    <string name="select_about">Select About</string>
    <string name="currently_set_to">Currently set to</string>
    <string name="today">Today</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="tap_and_hold_on_any_message_in_any_chat_to_star_it_so_you_can_easily_find_it_later">Tap and hold on any message in any chat to star it, so you can easily find it later.</string>
    <string name="star">Star</string>
    <string name="forward">Forward</string>
    <string name="all_media">All media</string>
    <string name="show_in_chat">Show in chat</string>
    <string name="set_as">Set as...</string>
    <string name="view_in_gallery">View in gallery</string>
    <string name="rotate">Rotate</string>
    <string name="delete">Delete</string>
    <string name="my_profile_photo">My profile photo</string>
    <string name="group_icon">Group icon</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="add_caption">Add caption...</string>
    <string name="retry">Retry</string>
    <string name="you">You</string>
    <string name="wapp_clone_contact">WApp Clone contact</string>
    <string name="your_friends_can_scan_this_code_to_get_your_wapp_clone_number">Your friends can scan this code to get your WApp Clone number</string>
    <string name="hey_there_i_m_wapp_clone_bot">Hey there! I\'m WApp Clone bot.</string>
    <string name="wapp_clone_bot">WApp Clone Bot</string>
    <string name="go_to_settings">Go to settings</string>
    <plurals name="number_of_messages">
        <item quantity="one">%d unread message</item>
        <item quantity="other">%d unread messages</item>
    </plurals>
</resources>
