<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/gallery_img_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/green_circular_bg"
        android:backgroundTint="@color/colorPurple"
        android:foreground="@drawable/ic_photo_select_actual_24dp"
        android:foregroundGravity="center"
        app:layout_constraintStart_toEndOf="@+id/remove_iv"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/ic_photo_select_actual_24dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_photo"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/camera_img_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/green_circular_bg"
        android:backgroundTint="@color/colorBlue"
        android:foreground="@drawable/ic_camera_white_24dp"
        android:foregroundGravity="center"
        app:layout_constraintStart_toEndOf="@+id/gallery_img_view"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/gallery_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gallery_img_view"
        app:layout_constraintStart_toStartOf="@+id/gallery_img_view"
        app:layout_constraintTop_toBottomOf="@+id/gallery_img_view" />

    <TextView
        android:id="@+id/camera_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/camera_img_view"
        app:layout_constraintStart_toStartOf="@+id/camera_img_view"
        app:layout_constraintTop_toBottomOf="@+id/camera_img_view" />

    <ImageView
        android:id="@+id/remove_iv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/green_circular_bg"
        android:backgroundTint="@android:color/holo_red_dark"
        android:foreground="@drawable/ic_delete_grey_24dp"
        android:foregroundGravity="center"
        android:foregroundTint="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/remove_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="Remove photo"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/remove_iv"
        app:layout_constraintStart_toStartOf="@+id/remove_iv"
        app:layout_constraintTop_toBottomOf="@+id/remove_iv"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>